<resources>
    <string name="app_name">Gerador de Apertos</string>
    <string name="cadastro">Cadastro</string>
    <string name="mi_historico">Histórico</string>
    <string name="mi_configuracoes">Configurações</string>
    <string name="mi_sobre">Sobre</string>
    <string name="tv_np">NP</string>
    <string name="tv_processo">Processo</string>
    <string name="tv_programa">Programa</string>
    <string name="tv_ciclo">Ciclos</string>
    <string name="tv_motivo">Motivo</string>
    <string name="tv_data">Data</string>
    <string name="tv_sucesso">Registro gerado com sucesso!</string>
    <string name="tv_registro">Registro de aperto gerado</string>
    <string name="tv_cadastro_aperto">Cadastro de processos</string>
    <string name="tv_cadastro_processo">Processo</string>
    <string name="tv_cadastro_programa">Programa</string>
    <string name="tv_cadastro_ciclos">Ciclos</string>
    <string name="tv_cadastro_nominal">Valor nominal</string>
    <string name="et_cadastro_nominal">555</string>
    <string name="bt_cadastro_motivo">Cadastro de motivo</string>
    <string name="historico">Histórico</string>
    <string name="inicio">Início</string>
    <string name="fim">Fim</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="configuracoes">Configurações</string>
    <string name="manter_configuracao">Manter ultima configuração de aperto no formulário</string>
    <string name="tolerancia">Taxa de tolerância de aperto</string>
    <string name="simbolo_porcentagem">%</string>
    <string name="taxa_tolerancia">55</string>
    <string name="sobre">Sobre</string>
    <string name="sobre_descricao">Gerador de Registro de Apertos versão 1.0\n Flávio Aparecido Ribeiro © 2020. Todos os direitos reservados.</string>
    <string name="notas_titulo">Notas das versões</string>
    <string name="leitura_cabecalho">Aponte a câmera para o código de barras</string>
    <string name="leitura_cabecalho_ok">Código lido com sucesso!\nAguarde</string>
    <string name="tv_formulario_ciclos">1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12</string>
    <string name="titulo_formulario">Configuração do aperto</string>
    <string name="programa_individual">Programa individual</string>
    <string name="programa_lote">Programa em lote</string>
    <string name="leitura">Scanner</string>
    <string name="cadastro_processo">Cadastro de apertadeira</string>
    <string name="informe_nome_processo">Informe o nome do apertadeira que deseja cadastrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="informe_nome_motivo">Informe a justificativa que deseja cadastrar</string>
    <string name="angulo">Ângulo</string>
    <string name="bt_cadastro_programa">Cadastro de processo</string>
    <string name="cadastro_programa">Cadastro de processo</string>
    <string name="processo">Programa</string>
    <string name="apertadeira">Processo</string>
    <string name="motivo">Motivo</string>
    <string name="cadastrar_novo">Cadastrar novo apertadeira</string>
    <string name="tv_cadastro_processo_lista_rodape">Clique e mantenha pressionado em um apertadeira na lista para excluir ou alterar</string>
    <string name="remover">Remover</string>
    <string name="alterar">Alterar</string>
    <string name="alterar_processo">Alterar apertadeira</string>
    <string name="alterar_processo_descricao">Informe o novo nome do apertadeira</string>
    <string name="remover_processo">Remover apertadeira</string>
    <string name="remover_processo_descricao">Deseja mesmo remover o apertadeira?\nSeus dados não poderam mais ser recuperados.</string>
    <string name="cadastro_motivo">Cadastro de motivo</string>
    <string name="tv_cadastro_motivo_lista_rodape">Clique e mantenha pressionado em um motivo na lista para excluir ou alterar</string>
    <string name="cadastrar_novo_motivo">Cadastrar novo motivo</string>
    <string name="remover_motivo">Remover motivo?</string>
    <string name="remover_motivo_descricao">Se você remover ele não podera mais ser recuperado.</string>
    <string name="alterar_motivo">Alterar motivo</string>
    <string name="alterar_motivo_descricao">Informe o novo motivo</string>
    <string name="selecionar_processo">Selecionar apertadeira</string>
    <string name="nome">Nome</string>
    <string name="inserir_nome_programa">Inserir nome do processo</string>
    <string name="inserir_qtd_ciclos">Inserir quantidade de ciclos</string>
    <string name="inserir_valor_nominal">Inserir valor nominal</string>
    <string name="inserir_angulo">Inserir ângulo</string>
    <string name="confirmar">Confirma</string>
    <string name="selecao_processo">Seleção de apertadeira</string>
    <string name="selecione_processo_lista">Selecione um apertadeira na lista</string>
    <string name="alert_titulo_nome_programa">Inserir nome do processo</string>
    <string name="alert_msg_programa">Informe o nome do processo</string>
    <string name="hint_nome_programa">Nome do processo</string>
    <string name="alerto_title_ciclos">Definir ciclos</string>
    <string name="alert_msg_ciclos">Quantos ciclos de aperto tera o processo?</string>
    <string name="alert_titulo_nominal">Valor nominal</string>
    <string name="alert_msg_nominal">Informe o valor. Para valores inferiores a 100 e decimais utilize 0 antes de informar o valor. Ex: (013,3 é 13,3) </string>
    <string name="mascara_valor_nominal">###.#</string>
    <string name="alert_titulo_angulo">Ângulo</string>
    <string name="alert_msg_angulo">Informe o valor.</string>
    <string name="alert_programa_titulo_salvar">Salvar processo</string>
    <string name="alert_programa_msg_salvar">Deseja salvar o processo?</string>
    <string name="unidade_newton_metro">%1$.1f Nm</string>
    <string name="unidade_grau">%1$d °</string>
    <string name="msg_programa_salvo">Programa salvo com sucesso!</string>
    <string name="string_valor_vazio" />
    <string name="string_sem_nome">Sem nome</string>
    <string name="msg_formulario_incompleto">Os campos ainda não foram totalmente preenchidos</string>
    <string name="formato_data">dd/MM/yyyy</string>
    <string name="formato_dia">dd</string>
    <string name="formato_mes">MM</string>
    <string name="formato_ano">yyyy</string>
    <string name="formato_separador">/</string>
    <string name="np">np</string>
    <string name="mascara_np">##/######.#</string>
    <string name="alert_titulo_formulario_ciclos">Ciclos de aperto</string>
    <string name="alert_msg_registro_ciclos">Selecione os ciclos de aperto</string>
    <string name="alert_titulo_registro_ciclos">Ciclos de aperto</string>
    <string name="selecionar_todos">Todos</string>
    <string name="alert_formulario_titulo_incompleto">Formulario incompleto</string>
    <string name="alert_formulario_msg_incompleto">NP faltando números, ciclos ou motivo não selecionados.</string>
    <string name="ok">OK</string>
    <string name="alert_formulario_titulo_limpar">Deseja limpar as informações do formulário?</string>
    <string name="alert_titulo_gravar_registro">Gravar registro</string>
    <string name="alert_msg_gravar_registro">Deseja gravar este registro?</string>
    <string name="alert_confirmacao_gravar_registro">Registro gravado com sucesso</string>
    <string name="remover_registro">Exclusão de registro</string>
    <string name="remover_registro_descricao">Deseja excluir este registro? Os dados não poderão ser recuperados após a exclusão.</string>
    <string name="NP">NP</string>
    <string name="ponto">.</string>
    <string name="barra">/</string>
    <string name="enviar">Enviar</string>
    <string name="relacao_programa">Relação de processos</string>
    <string name="tv_relacao_programa_lista_rodape">Clique e mantenha pressionado em um processo na lista para excluir ou alterar</string>
    <string name="cadastrar_novo_programa">Cadastrar novo processo</string>
    <string name="remover_programa">Remover processo</string>
    <string name="remover_programa_descricao">Deseja remover o processo? Suas informações não poderão ser recuperadas.</string>
    <string name="alterar_programa">Alterar processo</string>
    <string name="alterar_programa_descricao">Deseja realmente alterar o processo? As informações não poderam ser revertidas.</string>
    <string name="informe_nome_programa">Informe o nome do processo</string>
    <string name="mi_programas">Programas</string>
    <string name="mi_programa">Programa</string>
    <string name="mi_processo">Processo</string>
    <string name="mi_motivo">Motivo</string>
    <string name="mg_gerar_registro">Gerar registro</string>
    <string name="mi_gerar_grupo">Por grupo de processos</string>
    <string name="mi_gerar_programa">Por processo</string>
    <string name="mi_gerar_registro">Gerar registro</string>
    <string name="mi_cadastro">Cadastro</string>
    <string name="lbl_registro_processo">Gerar registro por processo</string>
    <string name="lbl_registro_apertadeira">Registro por apertadeira</string>
    <string name="texto">texto</string>
    <string name="icon_search"></string>
    <string name="mi_inicio">Inicio</string>
    <string name="ad_msg_remover_apertadeira">Deseja remover a apertadeira? Todos os processos relacionados serão removidos também.</string>
    <string name="ad_titulo_remover_apertadeira">Remover apertadeira</string>
    <string name="ad_titulo_alterar_apertadeira">Alterar apertadeira</string>
    <string name="ad_msg_alterar_apertadeira">Informe o novo nome da apertadeira</string>
    <string name="tv_gera_registro_apertadeira">Apertadeira</string>
    <string name="tv_historico_apertadeira">Apertadeira</string>
    <string name="tv_apertadeira">Apertadeira</string>
    <string name="mi_apertadeira">Apertadeira</string>
    <string name="ad_titulo_cadastrar_apertadeira">Cadastrar apertadeira</string>
    <string name="ad_msg_cadastrar_apertadeira">Informe o nome da nova apertadeira</string>
    <string name="ad_titulo_cadastrar_programa_apertadeira">Seleção de apertadeira</string>
    <string name="ad_msg_cadastrar_programa_apertadeira">Selecione uma apertadeira na lista</string>
    <string name="tv_relacao_processo_lista_rodape">Clique e mantenha pressionado em algum processo na lista para remover ou alterar.</string>
    <string name="bt_cadastrar_novo_processo">Cadastrar novo processo</string>
    <string name="mi_gerar_processo_grupo">Por grupo de processos</string>
    <string name="mi_gerar_processo">Por processo</string>
    <string name="ad_titulo_cadastrar_processo_apertadeira">Apertadeira</string>
    <string name="ad_msg_cadastrar_processo_apertadeira">Selecione a apertadeira na relação</string>
    <string name="ad_titulo_cadastrar_processo_nome">Nome do processo</string>
    <string name="ad_msg_cadastrar_processo_nome">Informe o nome do processo</string>
    <string name="ad_titulo_cadastrar_processo_inserir">Inserir</string>
    <string name="ad_msg_cadastrar_processo_inserir">Deseja inserir o novo processo?</string>
    <string name="msg_processo_salvo">Processo inserido com sucesso.</string>
    <string name="tv_cadastro_processo_nome">Inserir nome do processo</string>
    <string name="ad_titulo_alterar_processo">Alterar</string>
    <string name="ad_msg_alterar_processo">Deseja alterar o processo?</string>
    <string name="ad_titulo_remover_processo">Remover</string>
    <string name="ad_msg_remover_processo">Deseja realmente remover o processo? As informações não poderam ser recuperadas.</string>
    <string name="lbl_relacao_processos">Relação de processos</string>
    <string name="mi_gerar_apertadeira">Por apertadeira</string>
    <string name="ad_titulo_gera_registro_incompleto">Formulário incompleto</string>
    <string name="ad_msg_gera_registro_incompleto">Ainda faltam dados no formulário para gerar o registro.</string>
    <string name="rb_gera_registro_tipo_processo">Processo</string>
</resources>