<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mi_inicio"
        android:title="@string/mi_inicio"/>
    <item
        android:id="@+id/mi_gerar_registro"
        android:title="@string/mi_gerar_registro"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/mi_gerar_programa"
                android:title="@string/mi_gerar_programa" />
            <item
                android:id="@+id/mi_gerar_grupo"
                android:title="@string/mi_gerar_grupo" />
        </menu>
    </item>
    <item
        android:id="@+id/mi_cadastro"
        android:title="@string/mi_cadastro"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/mi_processo"
                android:title="@string/mi_processo" />
            <item
                android:id="@+id/mi_programa"
                android:title="@string/mi_programa" />
            <item
                android:id="@+id/mi_motivo"
                android:title="@string/mi_motivo" />
        </menu>
    </item>
    <item
        android:id="@+id/mi_historico"
        android:title="@string/mi_historico" />
    <item
        android:id="@+id/mi_configuracoes"
        android:title="@string/mi_configuracoes" />
    <item
        android:id="@+id/mi_sobre"
        android:title="@string/mi_sobre" />
</menu>