<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Configuracoes">

    <TextView
        android:id="@+id/tv_configuracoes_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/configuracoes"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sw_configuracoes_manter"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans"
        android:paddingLeft="0dp"
        android:switchPadding="20dp"
        android:text="@string/manter_configuracao"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_configuracoes_titulo" />

    <TextView
        android:id="@+id/tv_configuracoes_tolerancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/tolerancia"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_configuracoes_manter" />

    <EditText
        android:id="@+id/et_configuracoes_tolerancia"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="3"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:text="@string/taxa_tolerancia"
        app:layout_constraintBottom_toBottomOf="@+id/tv_configuracoes_tolerancia"
        app:layout_constraintStart_toEndOf="@+id/tv_configuracoes_tolerancia"
        app:layout_constraintTop_toTopOf="@+id/tv_configuracoes_tolerancia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/simbolo_porcentagem"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_configuracoes_tolerancia"
        app:layout_constraintStart_toEndOf="@+id/et_configuracoes_tolerancia"
        app:layout_constraintTop_toTopOf="@+id/et_configuracoes_tolerancia" />

    <Button
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bt_principal"
        android:elevation="8dp"
        android:fontFamily="@font/font_awesome_5"
        android:gravity="center"
        android:text="@string/icon_home"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>